Install goyacc via circle-ci config.yml
Signed-off-by: Harkishen-Singh <harkishensingh@hotmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
 
     steps:
     - prometheus/setup_environment
+    - go get -u golang.org/x/tools/cmd/goyacc
     - go/load-cache:
         key: v1
     - restore_cache:
