golangci: Use depguard to prevent using restricted packages
Enabling this linter in golangci will check that we are not using
restricted packages, and when a match is found, it will provide a
message suggesting the alternative package.

In this particular case, we enable it for `sync/atomic`.

Signed-off-by: Javier Palomo <javier.palomo.almena@gmail.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,6 +4,7 @@ run:
 
 linters:
   enable:
+  - depguard
   - golint
 
 issues:
@@ -13,5 +14,12 @@ issues:
     - errcheck
 
 linters-settings:
+  depguard:
+    list-type: blacklist
+    include-go-root: true
+    packages:
+      - sync/atomic
+    packages-with-error-message:
+      - sync/atomic: "Use go.uber.org/atomic instead of sync/atomic"
   errcheck:
     exclude: scripts/errcheck_excludes.txt
