Update prombench workflows to incorporate new naming convention
Signed-off-by: Drumil Patel <drumilpatel720@gmail.com>

--- a/.github/workflows/prombench.yml
+++ b/.github/workflows/prombench.yml
@@ -34,7 +34,7 @@ jobs:
       uses: docker://prominfra/prombench:master
       with:
         args: >-
-          until make all_nodepools_deleted; do echo "waiting for nodepools to be deleted"; sleep 10; done;
+          until make all_nodes_deleted; do echo "waiting for nodepools to be deleted"; sleep 10; done;
           make deploy;
     - name: Update status to failure
       if: failure()
@@ -69,7 +69,7 @@ jobs:
       uses: docker://prominfra/prombench:master
       with:
         args: >-
-          until make all_nodepools_running; do echo "waiting for nodepools to be created"; sleep 10; done;
+          until make all_nodes_running; do echo "waiting for nodepools to be created"; sleep 10; done;
           make clean;
     - name: Update status to failure
       if: failure()
@@ -104,9 +104,9 @@ jobs:
       uses: docker://prominfra/prombench:master
       with:
         args: >-
-          until make all_nodepools_running; do echo "waiting for nodepools to be created"; sleep 10; done;
+          until make all_nodes_running; do echo "waiting for nodepools to be created"; sleep 10; done;
           make clean;
-          until make all_nodepools_deleted; do echo "waiting for nodepools to be deleted"; sleep 10; done;
+          until make all_nodes_deleted; do echo "waiting for nodepools to be deleted"; sleep 10; done;
           make deploy;
     - name: Update status to failure
       if: failure()
