Fix config unit-test errors.
Signed-off-by: Harkishen-Singh <harkishensingh@hotmail.com>

--- a/config/testdata/conf.good.yml
+++ b/config/testdata/conf.good.yml
@@ -73,7 +73,7 @@ scrape_configs:
     target_label:  cde
   - replacement:   static
     target_label:  abc
-  - regex:
+  - regex: ""
     replacement:   static
     target_label:  abc
 
