Add VictoriaMetrics remote datasource

--- a/Makefile.common
+++ b/Makefile.common
@@ -97,7 +97,7 @@ BIN_DIR                 ?= $(shell pwd)
 DOCKER_IMAGE_TAG        ?= $(subst /,-,$(shell git rev-parse --abbrev-ref HEAD))
 DOCKERFILE_PATH         ?= ./Dockerfile
 DOCKERBUILD_CONTEXT     ?= ./
-DOCKER_REPO             ?= prom
+DOCKER_REPO             ?= jfrog.joom.it/docker-images
 
 DOCKER_ARCHS            ?= amd64
 
