documentation/examples: change ingress apiGroup
Signed-off-by: paulfantom <pawel@krupa.net.pl>

--- a/documentation/examples/rbac-setup.yml
+++ b/documentation/examples/rbac-setup.yml
@@ -19,7 +19,7 @@ rules:
   - pods
   verbs: ["get", "list", "watch"]
 - apiGroups:
-  - extensions
+  - networking.k8s.io
   resources:
   - ingresses
   verbs: ["get", "list", "watch"]
