--- a/cmd/promtool/testdata/rules.yml
+++ b/cmd/promtool/testdata/rules.yml
@@ -1,7 +1,7 @@
 # This is the rules file.
 
 groups:
-  - name: example
+  - name: alerts
     rules:
       - alert: InstanceDown
         expr: up == 0
@@ -11,3 +11,12 @@ groups:
         annotations:
           summary: "Instance {{ $labels.instance }} down"
           description: "{{ $labels.instance }} of job {{ $labels.job }} has been down for more than 5 minutes."
+
+  - name: rules
+    rules:
+      - record: job:test:count1m
+        expr: sum without(instance) (count_over_time(test[1m]))
+
+      # A recording rule that doesn't depend on input series.
+      - record: fixed_data
+        expr: 1
