Restrict fuzzing on go paths
Signed-off-by: Julien Pivotto <roidelapluie@inuits.eu>
Signed-off-by: hutianhao <hutianhao@inspur.com>

--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -1,5 +1,10 @@
 name: CIFuzz
-on: [pull_request]
+on:
+  pull_request:
+    paths:
+      - 'go.sum'
+      - 'go.mod'
+      - '**.go'
 jobs:
  Fuzzing:
    runs-on: ubuntu-latest
